[package]
name = "ipix-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ipix_rs"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
anyhow = "1.0"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sqlx = {version="0.6", features = ["sqlite", "chrono","runtime-tokio-native-tls"]}
tokio = { version = "1.20.0", features = ["rt-multi-thread", "parking_lot","macros"]}
once_cell = "1.10.0"
chrono = {version = "0.4", features = ["serde"]}
simplelog = { version = "^0.12.0", features = ["paris"] }
thiserror = "^1.0.31"
log = "*"
uuid ={ version = "*",features = ["v4"]}
[dev-dependencies]
test-context = "0.1.3"