[package]
authors = ["liweiv"]
description = "iPix"
edition = "2021"
license = "AGPL v3"
name = "ipix-desktop"
repository = "https://github.com/pangu-studio/ipix.git"
rust-version = "1.57"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=1.1.1", features = [] }

[dependencies]
ipix-rs = {path="../../ipix-rs"}
chrono = { version = "*"}
qiniu-sdk = { version = "^0.2.0", features = ["upload-token", "upload"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "=1.1.2", features = ["api-all"] }
uuid = {version = "1.1.2",features= ["v4"] }
anyhow = "1.0.51"
simplelog = { version = "^0.12.0", features = ["paris"] }
log = "*"
[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
# tag = "v0.1.0"
branch = "dev"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
